src/App.css
@import url('https://fonts.googleapis.com/css2?family=Raleway:ital,wght@0,100..900;1,100..900&display=swap');
@tailwind base;
@tailwind components;
@tailwind utilities;
* {
 /* width: 100%; */
 box-sizing: border-box;
 font-family: "Raleway", sans-serif;
}

html{
  /* scroll-snap-type: y mandatory; */
  scroll-behavior: smooth;
  
  
}
#Services {
  /* scroll-snap-type: y mandatory; */
  /* background-color: brown; */
}

#app {
  /* background-image: url(/bg.png); */
  /* height: 100vh; */
  /* color: ; */
  /* height: max-content; */
  
}
.bord {
  border: 1px solid blanchedalmond;
}
.center {
  display: flex;
  justify-content: center;
  align-items: center;
}

section {
  /* border: 1px solid blanchedalmond; */
  /* margin-bottom: 20vh; */
  display:flex;
  flex-direction: column;
  align-items: center;
  justify-content: center;
  width: 100%;
  min-height: 100vh;
  scroll-snap-align: start;
}

@keyframes vibrate {
  0% { transform: translate(0); }
  20% { transform: translate(-1.5px, 1.5px); }
  40% { transform: translate(1.5px, -1.5px); }
  60% { transform: translate(-1.5px, -1.5px); }
  80% { transform: translate(1.5px, 1.5px); }
  100% { transform: translate(0); }
}

.contact-element:hover {
  animation: vibrate 0.2s linear ;
}


@media screen and (max-width:480px) {
  section {
    min-height: 75vh;
  }
}

/* 
@keyframes logo-spin {
  from {
    transform: rotate(0deg);
  }
  to {
    transform: rotate(360deg);
  }
}

@media (prefers-reduced-motion: no-preference) {
  a:nth-of-type(2) .logo {
    animation: logo-spin infinite 20s linear;
  }
} */

